--- a/02_manejo_datos/estructuras_de_datos.Rmd
+++ b/02_manejo_datos/estructuras_de_datos.Rmd
@@ -276,3 +276,14 @@ En R también podemos crear matrices de varias dimensiones, los llamados "arrays
 ?array
 ```
 
+```{r}
+# EJERCICIO 1
+
+# Crea un dataframe de 1000 filas en el que la primera columna sea una columna numérica que siga una distribución normal con media 0 y desviación típica 1. La segunda columna debe ser una distribución aleatoria de las letras del alfabeto. Pista: usa las funciones "rnorm" y "runif", y el vector "letters"
+
+# EJERCICIO 2
+
+# En el dataframe del ejercicio anterior, sustituye todas las letras "c" por "k". Pista: recuerda la función "which".
+
+```
+
